@@ -75,7 +75,7 @@
       <module id="gucharmap" branch="gnome-2-14"/>
       <module id="libgnomeprint"/>
       <module id="libgnomeprintui"/>
-      <module id="libgtop"/>
+      <module id="libgtop" branch="gnome-2-14"/>
       <module id="libwnck" branch="gnome-2-14"/>
       <module id="metacity" branch="gnome-2-14"/>
       <module id="nautilus" branch="gnome-2-14"/>
@@ -324,7 +324,7 @@
       <module id="gucharmap" branch="gnome-2-16"/>
       <module id="libgnomeprint" branch="gnome-2-12"/>
       <module id="libgnomeprintui" branch="gnome-2-12"/>
-      <module id="libgtop"/>
+      <module id="libgtop" branch="gnome-2-14"/>
       <module id="libwnck" branch="gnome-2-16"/>
       <module id="metacity" branch="gnome-2-16"/>
       <module id="nautilus" branch="gnome-2-16"/>
@@ -412,7 +412,7 @@
       <module id="libgnomekbd"/>
       <module id="libgnomeprint" branch="gnome-2-18"/>
       <module id="libgnomeprintui"/>
-      <module id="libgtop"/>
+      <module id="libgtop" branch="gnome-2-14"/>
       <module id="libwnck"/>
       <module id="metacity" branch="gnome-2-18"/>
       <module id="nautilus" branch="gnome-2-18"/>
