@@ -1,3 +1,8 @@
+2007-04-27  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in: Added gnome-games manuals ported to g-d-u.
+	* releases.xml.in: libgtop branched for 2.14.
+
 2007-04-27  Vladimer Sichinava  <vsichi@gnome.org>
 
 	* people.xml.in changed Georgian section.
